--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,10 @@
-<p>contact works!</p>
+<div class="form-container">
+    <h1>Contact us</h1>
+    <form [formGroup]="contactForm">
+    <input type="text" formControlName="name" placeholder="Digite su nombre">
+    <input type="text" formControlName="email" placeholder="Digite su Email">
+    <textarea formControlName="message" placeholder="Escriba su mensaje"></textarea>
+    <button type="submit" class="btn-send">Send</button>
+    </form>
+
+</div>
