--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -52,3 +52,14 @@
 .form-container .btn-send:hover{
     background: #2ebc99;
 }
+
+.alert-danger{
+    color: #721c24;
+    background: #f8d7da;
+    border-color: #f5c6cb;
+    margin-bottom: 5px;
+}
+
+.container-error-message{
+    padding: 3px;
+}
